# Sandglass

./: .code-workspace  .firebaserc  .gitattributes  .gitignore  AGENT_INSTRUCTION.md  README.md  README.zh-CN.md  TODO  apphosting.dev.yaml  apphosting.prod.yaml  apphosting.yaml  firebase.json  package.json  pnpm-lock.yaml  tsconfig.json
api/: .env.example  .gitignore  DesignDoc.md  app.py  designdoc.md  dev.sh  generate-openapi.ts  models.py  nest-cli.json  openapi.json  package.json  pnpm-lock.yaml  prod.sh  pyproject.toml  requirements.txt
api/.github/workflows/: python-app.yml
api/docs/: api.md  designdoc.md
api/sandglass_api/: app.py  config.py  db.py  env.py  util.py
api/sandglass_api/middleware/: db_module.py  jwt.py  jwt_module.py  oss.py  oss_module.py
api/sandglass_api/models/: access_control.py  attachment.py  node.py  project.py  resource.py  task.py  tasks.py  user.py
api/sandglass_api/module/: attachment_api.py  auth_api.py  auth_util.py  node_api.py  project_api.py  session_api.py  task_api.py  user_api.py
api/src/: .env.example  app.exception.ts  app.module.ts  app.swagger.ts  apphosting.yaml  db.py  main.py  main.ts  util.py
api/src/attandance/: attandance.module.ts
api/src/authentication/: authentication.decorator.ts  authentication.exception.ts  authentication.guard.spec.ts  authentication.guard.ts
api/src/firebase/: firebase.module.ts  firebase.service.ts
api/src/github/: github.controller.ts  github.exception.ts  github.module.ts
api/src/github-auth/: github-auth.controller.ts  github-auth.service.ts
api/src/google-auth/: google-auth.controller.ts  (+3 more)
api/tests/: config.py  conftest.py  example_obj.py  test_app.py  test_auth.py  test_auth_api.py  test_node_api.py  test_proj_api.py  test_user.py  test_user_api.py  test_util.py  util.py
(+246 files in other folders)
