[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sandglass_api"
version = "0.0.0"
description = "RESTful API for Sandglass"
authors = [
    { name = "kanata", email = "cyz050312@gmail.com" }
]
readme = "README.md"
# requires-python = ">=3.8"

dependencies = [
    "python-dotenv",
    "fastapi[stardard]",
    "motor",
    "beanie",
    "authx",
    "passlib"
]

[project.optional-dependencies]
dev = ["pytest", "flake8", "mongomock"]

# [project.scripts]
# sandglass.dev = "sandglass_api.app:main"
